@@ -1,3 +1,4 @@
+- added input delay and message for taking screenshot (2023/05/20 MS)
 - updated config.guess/sub and added compile file (2023/03/03 MS)
 
 1.0.6:
